--- a/02_gowin/DDS_project/impl/project_process_config.json
+++ b/02_gowin/DDS_project/impl/project_process_config.json
@@ -23,7 +23,7 @@
  "ERROR_INJECTION" : false,
  "EXTERNAL_MASTER_CONFIG_CLOCK" : false,
  "FORMAT" : "binary",
- "FREQUENCY_DIVIDER" : "1",
+ "FREQUENCY_DIVIDER" : "",
  "FSM Compiler" : true,
  "Fanout_Guide" : 10000,
  "Frequency" : "Auto",
@@ -84,7 +84,7 @@
  "Run_Timing_Driven" : true,
  "SECURE_MODE" : false,
  "SECURITY_BIT" : true,
- "SSPI" : false,
+ "SSPI" : true,
  "STOP_CMSER" : false,
  "Show_All_Warnings" : false,
  "Synthesis On/Off Implemented as Translate On/Off" : false,
